--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
   <!-------------------------------------------------------------------------------------------------------->
 
   <!-- Primer bloque -->
-  <div class="div-azul col-md-12">
+  <div class="div-azul col-md-12 col-sm-12">
     <div class="row">
-      <!-- Texto -->
+      <!-- Texto desk -->
       <div class="col-md-6">
-        <img class="text-desk d-none d-sm-none d-md-block" src="assets/img/text-mobile.svg" alt="text-mobile"/>
+        <img class="text-desk d-none d-sm-none d-md-block" src="assets/img/text.svg" alt="text"/>
       </div>
 
       <!-- Img  -->
