--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
   <!-------------------------------------------------------------------------------------------------------->
 
    <!--Tercer bloque -->
-   <div class="col-md-12 col-sm-12">
+   <div class="col-md-12">
     <div class="row">
       <!-- Ventajas -->
-      <div class="col-md-12 col-sm-12">
+      <div class="col-md-12">
         <!-- desk -->
-        <img class="ventajasimg" src="assets/img/ventajas.svg" alt="ventajas"/>
+        <img class="ventajasimg d-none d-sm-none d-md-block" src="assets/img/ventajas.svg" alt="ventajas"/>
       </div>
     </div>
   </div>  
