--- a/index.html
+++ b/index.html
@@ -27,8 +27,14 @@
   <div class="div-azul col-md-12 col-sm-12">
     <div class="row">
       <!-- Texto desk -->
-      <div class="col-md-6">
-        <img class="text-desk d-none d-sm-none d-md-block" src="assets/img/text.svg" alt="text"/>
+      <div class="col-md-6 d-none d-sm-none d-md-block">
+        <h1 class="text-principal">Botón de arrepentimiento</h1>
+        <h1 class="autogestionable">autogestionable</h1>
+        <img id="flechita" src="assets/img/flechita.svg" alt="flechita"/>
+        <div class="porcentaje d-flex">
+          <p class="text-porc"> 98%</p>
+          <p class="info-porc">De los arrepentimientos se resuelven a través del flujo automatizado.</p>
+        </div>
       </div>
 
       <!-- Img  -->
