--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
    <!--Tercer bloque -->
     <!-- desk img -->
-      <img class="ventajasimg d-none d-sm-none d-md-block" src="assets/img/ventajas.svg" alt="ventajas"/>
+      <img class="ventajasimg d-none d-sm-none d-md-block mt-4" src="assets/img/ventajas.svg" alt="ventajas"/>
     <!-- mobile img -->
       <img class="ventajasimg-mobile d-md-none" src="assets/img/mobile/ventajas-mobile.svg" alt="ventajas"/>  
   <!-- Fin tercer bloque -->
@@ -125,63 +125,43 @@
           <div class="" id="headingOne">
             <h5 class="mb-0">
             <button class="btn btn-list-opt mt-2" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              <span style="color:blue">1. </span> Acceso a historial de Pedidos (tanto para clientes registrados como para compradores "invitados") 
+              <span style="color:#3E70D9">1. </span> Acceso a historial de Pedidos (tanto para clientes registrados como para compradores "invitados") 
             </button>
             </h5>
-          </div>
-          <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-            <div class="">
-              falta ahdfhsdadhas opciones
-            </div>
           </div>
         <!-- Agregar otra ABAJO DE ESTA LINEA -->
         <!-- 2 -->
           <div class="" id="headingOne">
             <h5 class="mb-0">
             <button class="btn btn-list-opt mt-2" data-toggle="collapse" data-target="#opcion2" aria-expanded="true" aria-controls="opcion2">
-              <span style="color:blue">2. </span>  Reglas de Validez de Arrepentimiento (vs fecha de pedido "entregado")
+              <span style="color:#3E70D9">2. </span>  Reglas de Validez de Arrepentimiento (vs fecha de pedido "entregado")
             </button>
             </h5>
-          </div>
-          <div id="opcion2" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-            <div class="">
-              falta elasdhsdh
-            </div>
           </div>
         <!-- Agregar otra ABAJO DE ESTA LINEA -->
         <!-- 3 -->
           <div class="" id="headingOne">
             <h5 class="mb-0">
             <button class="btn btn-list-opt mt-2" data-toggle="collapse" data-target="#opcion3" aria-expanded="true" aria-controls="opcion3">
-              <span style="color:blue">3. </span> Cancelación automática de pedidos no despachados 
+              <span style="color:#3E70D9">3. </span> Cancelación automática de pedidos no despachados 
             </button>
             </h5>
-          </div>
-          <div id="opcion3" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-            <div class="">
-              fashsdhhsdhasdh
-            </div>
           </div>
         <!-- Agregar otra ABAJO DE ESTA LINEA -->   
         <!-- 4 -->
         <div class="" id="headingOne">
           <h5 class="mb-0">
           <button class="btn btn-list-opt mt-2" data-toggle="collapse" data-target="#opcion4" aria-expanded="true" aria-controls="opcion4">
-            <span style="color:blue">4. </span> Posibilidad de Arrepentimiento Total o Parcial
+            <span style="color:#3E70D9">4. </span> Posibilidad de Arrepentimiento Total o Parcial
           </button>
           </h5>
-        </div>
-        <div id="opcion4" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-          <div class="">
-            ajdfgsdasgnes
-          </div>
         </div>
       <!-- Agregar otra ABAJO DE ESTA LINEA -->
       <!-- 5 -->
         <div class="" id="headingOne">
           <h5 class="mb-0">
           <button class="btn btn-list-opt mt-2" data-toggle="collapse" data-target="#opcion5" aria-expanded="true" aria-controls="opcion5">
-            <span style="color:blue">5. </span> Gestión de logística Inversa automática:
+            <span style="color:#3E70D9">5. </span> Gestión de logística Inversa automática:
           </button>
           </h5>
         </div>
@@ -195,60 +175,59 @@
       <div class="" id="headingOne">
         <h5 class="mb-0">
         <button class="btn btn-list-opt mt-2" data-toggle="collapse" data-target="#opcion6" aria-expanded="true" aria-controls="opcion6">
-          <span style="color:blue">6. </span> Devolución de Dinero automática (contra recepción de pedido en depósito)
+          <span style="color:#3E70D9">6. </span> Devolución de Dinero automática (contra recepción de pedido en depósito)
         </button>
         </h5>
-      </div>
-      <div id="opcion6" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-        <div class="">
-          1231231231
-        </div>
       </div>
     <!-- Agregar otra ABAJO DE ESTA LINEA -->
     <!-- 7 -->
       <div class="" id="headingOne">
         <h5 class="mb-0">
         <button class="btn btn-list-opt mt-2" data-toggle="collapse" data-target="#opcion7" aria-expanded="true" aria-controls="opcion7">
-          <span style="color:blue">7. </span> Nota de Crédito Automática (contra devolución)
+          <span style="color:#3E70D9">7. </span> Nota de Crédito Automática (contra devolución)
         </button>
         </h5>
-      </div>
-      <div id="opcion7" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-        <div class="">
-          asdasd
-        </div>
       </div>
     <!-- Agregar otra ABAJO DE ESTA LINEA -->
     <!-- 8 -->
     <div class="" id="headingOne">
       <h5 class="mb-0">
       <button class="btn btn-list-opt mt-2" data-toggle="collapse" data-target="#opcion8" aria-expanded="true" aria-controls="opcion8">
-        <span style="color:blue">8. </span> Comunicación resumen y fin de gestión
+        <span style="color:#3E70D9">8. </span> Comunicación resumen y fin de gestión
       </button>
       </h5>
     </div>
-    <div id="opcion8" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-      <div class="">
-        asdasd
-      </div>
-    </div>
-  <!-- Agregar otra ABAJO DE ESTA LINEA -->                 
-      </div> 
-      <!-- fin acordeon -->  
+    <!-- Agregar otra ABAJO DE ESTA LINEA -->                 
+    </div> 
+    <!-- fin acordeon -->  
     </div>
   </div>
 
-  <!-- SLIDERR -->   
-
-
-
+  <!-- SLIDERR --> 
+  <div class="borrar-div" style="    width: 79%;
+  margin-left: 167px;
+  height: 800px;
+  background-color: black;">  </div>
   <!-- Fin Slider --> 
   <!-- Fin Cuarto bloque -->
 
   <!--Quinto Bloque -->
+  <div class="col-md-12 col-sm-12">
+    <div class="row">
+      <div class="col-md-6 col-sm-12">
+        <h2 class="inf-sobre-btn-title">¿Qué es el botón de arrepentimiento?</h2>
+        <p class="inf-sobre-btn-p">Obligación para los proveedores que comercialicen bienes y servicios a través de páginas o aplicaciones web de publicar un link denominado “Botón de Arrepentimiento”, mediante el cual los consumidores puedan solicitar la revocación de la aceptación del producto comprado o del servicio contratado.</p>
+        <a href="http://www.google.com.ar" class="btn-res">Ver resolución</a>
+      </div>
+      <div class="col-md-6 col-sm-12 background-img-div"></div>
+    </div>
+  </div>
   <!--Fin Quinto Bloque -->
 
   <!--Sexto Bloque -->
+  <div class="proyect-bg-img d-none d-sm-none d-md-block"></div>
+  <img src="assets/img/mobile/proyecto-mobile.svg" class="d-md-none proyect-mobile" alt="">
+  
   <!--Fin Sexto Bloque -->
 
   <!--septimo Bloque -->
