--- a/index.html
+++ b/index.html
@@ -225,19 +225,66 @@
   <!--Fin Quinto Bloque -->
 
   <!--Sexto Bloque -->
-  <div class="proyect-bg-img d-none d-sm-none d-md-block"></div>
-  <img src="assets/img/mobile/proyecto-mobile.svg" class="d-md-none proyect-mobile" alt="">
-  
+    <!--div con img-->
+      <div class="proyect-bg-img d-none d-sm-none d-md-block"></div>
+    <!--img-->
+      <img src="assets/img/mobile/proyecto-mobile.svg" class="d-md-none proyect-mobile" alt="">
   <!--Fin Sexto Bloque -->
 
-  <!--septimo Bloque -->
+  <!--septimo Bloque FORMULARIO-->
+    <h2 class="contact-title">¿Te interesa nuestra solución autogestionable? <span style="color: #3E70D9;">Escribinos</span></h2>
+    <!--Form container-->
+    <div class="form-container">
+      <form>
+        <div class="row">
+          <div class="form-group col-md-6">
+            <!--Nombre-->
+            <label class="label-2" for="nombre">Nombre</label>
+            <input type="text" class="form-control" id="nombre" aria-describedby="emailHelp" placeholder="Ingresá tu nombre">
+          </div>
+          <div class="form-group col-md-6">
+            <!--Empresa-->
+            <label class="label-2" for="empresa">Empresa</label>
+            <input type="text" class="form-control" id="empresa" placeholder="Ingresá la empresa">
+          </div>
+        </div>
+        <div class="form-group">
+          <!--Mail-->
+          <label class="label-2" for="email">Email</label>
+          <input type="email" class="form-control" id="email" placeholder="Tuemail@emailservice.com">
+        </div>
+        <div class="form-group">
+          <!--Mensaje-->
+          <label class="label-2" for="mensaje">Mensaje</label>
+          <input type="text" class="form-control mensaje" id="mensaje" placeholder="Comunicate con nosotros!">
+        </div>
+        <button type="submit" class="btn btn-form-new">Enviar mensaje</button>
+      </form>
+    </div>
+    <!--partnerships estratégicos-->
+    <h2 class="partnerships">Este proyecto es posible gracias a nuestros partnerships estratégicos</h2>
+    <img src="assets/img/mp-and.svg" style="margin-top: 40px; margin-left: 33%"alt="MercadoPago-Andreani">
   <!--Fin septimo Bloque -->
 
-
-
-
  
-  
+  <!--Footer -->
+    <div class="linea-separadora"></div>
+    <div class="d-flex justify-content-around">
+      <div class="logo mt-3">
+        <img src="assets/img/logo-pow-footer.svg" alt="">
+      </div>
+      <div class="footer-text">
+        <p>Cortina 120, Buenos Aires, Argentina.</p>
+      </div>
+      <div class="footer-text">
+        <p> +54 (011) 2146-9663</p> 
+      </div>
+      <div class="footer-text">
+        <p>2020@Pow. Todos los derechos reservados</p>
+      </div>
+    </div>
+  <!--Fin Footer -->
+
   <!-- SCRIPTS -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
