--- a/index.html
+++ b/index.html
@@ -263,7 +263,8 @@
     </div>
     <!--partnerships estratégicos-->
     <h2 class="partnerships">Este proyecto es posible gracias a nuestros partnerships estratégicos</h2>
-    <img src="assets/img/mp-and.svg" style="margin-top: 40px; margin-left: 33%"alt="MercadoPago-Andreani">
+    <img src="assets/img/mp-and.svg" class="d-none d-sm-none d-md-block" style="margin-top: 40px; margin-left: 33%"alt="MercadoPago-Andreani">
+    <img src="assets/img/mobile/partnership-mobile.svg" class="d-md-none partnership-mobile" alt="MercadoPago-Andreani">
   <!--Fin septimo Bloque -->
 
  
