--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <p class="vent-desk-p">Escalabilidad</p>
         </div>
         <div class="experiencia">
-          <img src="assets/img/tic.svg" alt="" class="vent-img">
+          <img src="assets/img/tic-vent.svg" alt="" class="vent-img">
           <p class="vent-desk-p">Buena experiencia a nuestro clientes</p>
         </div>
       </div>
