--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
     <h2 class="contact-title" id="formulario-red">¿Te interesa nuestra solución autogestionable? <span style="color: #3E70D9;">Escribinos</span></h2>
     <!--Form container-->
     <div class="form-container">
-      <form action="https://formspree.io/f/{kunkelbenjamin08@gmail.com}" method="post">
+      <form action="https://formspree.io/f/{benjamin@pow.la}" method="post">
         <div class="row">
           <div class="form-group col-md-6">
             <!--Nombre-->
