--- a/index.html
+++ b/index.html
@@ -379,23 +379,23 @@
           <div class="form-group col-md-6">
             <!--Nombre-->
             <label class="label-2" for="nombre">Nombre</label>
-            <input type="text" class="form-control" id="nombre" aria-describedby="emailHelp" placeholder="Ingresá tu nombre">
+            <input type="text" class="form-control" name="Nombre" id="nombre" aria-describedby="emailHelp" placeholder="Ingresá tu nombre">
           </div>
           <div class="form-group col-md-6">
             <!--Empresa-->
             <label class="label-2" for="empresa">Empresa</label>
-            <input type="text" class="form-control" id="empresa" placeholder="Ingresá la empresa">
+            <input type="text" class="form-control" name="Empresa" id="empresa" placeholder="Ingresá la empresa">
           </div>
         </div>
         <div class="form-group">
           <!--Mail-->
           <label class="label-2" for="email">Email</label>
-          <input type="email" class="form-control" id="email" placeholder="Tuemail@emailservice.com">
+          <input type="email" class="form-control" name="email" id="email" placeholder="Tuemail@emailservice.com">
         </div>
         <div class="form-group">
           <!--Mensaje-->
           <label class="label-2" for="mensaje">Mensaje</label>
-          <input type="text" class="form-control mensaje" id="mensaje" placeholder="Comunicate con nosotros!">
+          <input type="text" class="form-control mensaje" name="mensaje" id="mensaje" placeholder="Comunicate con nosotros!">
         </div>
         <button type="submit" class="btn btn-form-new">Enviar mensaje</button>
       </form>
