--- a/index.html
+++ b/index.html
@@ -374,17 +374,17 @@
     <h2 class="contact-title" id="formulario-red">¿Te interesa nuestra solución autogestionable? <span style="color: #3E70D9;">Escribinos</span></h2>
     <!--Form container-->
     <div class="form-container">
-      <form action="https://formspree.io/f/mwkwrayp" method="POST">
+      <form action="enviar2.php" method="POST">
         <div class="row">
           <div class="form-group col-md-6">
             <!--Nombre-->
             <label class="label-2" for="nombre">Nombre</label>
-            <input type="text" class="form-control" name="Nombre" id="nombre" aria-describedby="emailHelp" placeholder="Ingresá tu nombre">
+            <input type="text" class="form-control" name="nombre" id="nombre" aria-describedby="emailHelp" placeholder="Ingresá tu nombre">
           </div>
           <div class="form-group col-md-6">
             <!--Empresa-->
             <label class="label-2" for="empresa">Empresa</label>
-            <input type="text" class="form-control" name="Empresa" id="empresa" placeholder="Ingresá la empresa">
+            <input type="text" class="form-control" name="empresa" id="empresa" placeholder="Ingresá la empresa">
           </div>
         </div>
         <div class="form-group">
